[package]
name = "artichoke-site"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"

[dependencies.artichoke-backend]
git = "https://github.com/artichoke/artichoke"
branch = "master"

[dependencies.spec-runner]
git = "https://github.com/artichoke/artichoke"
branch = "master"
